--- a/Styling/nav.css
+++ b/Styling/nav.css
@@ -8,3 +8,91 @@
 .navbar {
   z-index: 100000;
 }
+
+.navbarSubTextColor {
+  color: var(--navbarSubTextColor);
+}
+.navbarSubTextColor:hover {
+  color: var(--dark);
+}
+.removeUnderline {
+  text-decoration: none;
+}
+.containerF {
+  width: 100%;
+}
+.buttonDesign {
+  border: none;
+}
+.navLinkF {
+  font-size: 18px;
+  border-bottom: 3px solid transparent;
+  transition: all 0.1s linear;
+}
+.navLinkF:hover {
+  border-bottom: 3px solid black;
+}
+.navImgW {
+  width: 28px;
+}
+.collapseW {
+  width: 800px;
+}
+.navBorderStyle {
+  width: 70%;
+  border: 0px;
+  margin-right: 10px;
+  outline: none;
+  background-color: transparent;
+}
+.searchCon {
+  width: 200px;
+}
+.searchHover {
+  transition: all 0.1s linear;
+}
+.searchHover:hover {
+  background-color: var(--darkgray);
+}
+.featuredD {
+  content: "";
+  position: absolute;
+  background-color: gray;
+  left: 0;
+  top: 72px;
+  width: 100%;
+  height: 300px;
+}
+.accordionRemoveB {
+  border: 0;
+  border-bottom: none;
+}
+
+.accordion-item:first-of-type .accordion-button {
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+}
+.accordion-button:not(.collapsed) {
+  color: black;
+  background-color: #e7f1ff;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+}
+.accordion-button:not(.collapsed) {
+  color: black;
+  background-color: #fff;
+  box-shadow: inset 0 -1px 0 rgb(0 0 0 / 13%);
+  /* border-left: 2em solid black; */
+}
+.accordion-button:focus {
+  box-shadow: none;
+  /* border-color: rgba(0, 0, 0, 0.125); */
+}
+.accordion-border {
+  border: none;
+}
+/* navbar media query */
+@media screen and (max-width: 992px) {
+  .navSearchResposive {
+    width: 100%;
+  }
+}
