--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
   --gray: #f5f5f5;
+  --strongGray: #e5e5e5;
   --darkgray: #e5e5e5;
   --dark: #111111;
   --footerTextColor: #7e7e7e;
@@ -49,7 +50,12 @@ ul {
 a {
   text-decoration: none;
 }
-h3 {
+h1,
+h2,
+h3,
+h4,
+h6,
+h5 {
   padding: 0;
   margin: 0;
 }
@@ -66,6 +72,9 @@ h3 {
 }
 .textGray {
   color: var(--darkgray);
+}
+.colorGray {
+  color: var(--footerTextColor);
 }
 .urbanistBold {
   font-family: urbanistBold;
@@ -97,6 +106,50 @@ h3 {
   max-height: 70px;
   overflow-y: scroll;
 }
+.cardShadow {
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  border: none;
+}
+.card-body {
+  min-height: 180px;
+}
+.sizeContainer {
+  text-align: center;
+  border: 1.5px solid var(--darkgray);
+  border-radius: 5px;
+  padding: 10px 0px;
+}
+.sizeContainer:hover {
+  border-color: var(--dark);
+}
+.addButton {
+  background-color: var(--dark);
+}
+.addButton:hover {
+  opacity: 0.8;
+}
+.addButton2 {
+  border: 1.5px solid var(--darkgray);
+}
+.addButton2:hover {
+  border-color: var(--dark);
+}
+.descriptionC {
+  color: var(--dark);
+}
+/* .accordion-button::after {
+  transform: none !important;
+  transition: none !important;
+} */
+.accordionButtonStyle1 {
+  width: 100%;
+  border-bottom: 1.5px solid var(--darkgray);
+  border-top: 1.5px solid var(--darkgray);
+}
+.accordionButtonStyle {
+  width: 100%;
+  border-bottom: 1.5px solid var(--darkgray);
+}
 /* end globals */
 
 /* ShoesItem style */
@@ -106,7 +159,9 @@ h3 {
 .itemContainer {
   width: 70%;
 }
-
+.accordionIconW {
+  width: 20px;
+}
 /* footer style */
 .footerStyle {
   background-color: var(--dark);
