--- a/Styling/login.css
+++ b/Styling/login.css
@@ -1,3 +1,11 @@
+:root {
+  --gray: #f5f5f5;
+  --strongGray: #e5e5e5;
+  --darkgray: #e5e5e5;
+  --dark: #111111;
+  --footerTextColor: #7e7e7e;
+  --navbarSubTextColor: #bbbbbb;
+}
 .form_container {
   width: 30%;
 }
@@ -12,4 +20,9 @@
   .form_container {
     width: 65%;
   }
+}
+
+.backgroundColor {
+  border: 1.5px solid var(--footerTextColor);
+  border-radius: 5px;
 }
