--- a/Styling/sign.css
+++ b/Styling/sign.css
@@ -1,3 +1,12 @@
+:root {
+  --gray: #f5f5f5;
+  --strongGray: #e5e5e5;
+  --darkgray: #e5e5e5;
+  --dark: #111111;
+  --footerTextColor: #7e7e7e;
+  --navbarSubTextColor: #bbbbbb;
+}
+
 .signIconS {
   width: 20px;
   margin-right: 5px;
@@ -11,7 +20,7 @@
 .inputDesign {
   outline: none;
   color: white;
-  border: 1px solid gray;
+  border: 1.5px solid gray;
 }
 .orBorder {
   height: 1px;
@@ -19,7 +28,7 @@
   border-bottom: 1px solid gray;
 }
 .signUpB {
-  border: 1.5px solid #3c76f2;
+  border: 1.5px solid var(--footerTextColor);
   border-radius: 8px;
 }
 .signIconsS2 {
@@ -32,9 +41,13 @@
 }
 .textBorder {
   text-decoration: underline;
-  color: white;
-  text-decoration-color: white;
+  color: var(--footerTextColor);
+  text-decoration-color: var(--footerTextColor);
   margin-left: 3px;
+}
+.textBorder:hover {
+  color: var(--dark);
+  text-decoration-color: var(--dark);
 }
 
 .signCBorderR {
@@ -46,6 +59,25 @@
 .signImgSO {
   width: 100%;
 }
+.buttonBackGround {
+  background-color: var(--footerTextColor);
+}
+.showText:hover {
+  color: var(--dark);
+}
+.loginHover {
+  color: var(--footerTextColor);
+}
+.loginHover:hover {
+  color: var(--footerTextColor);
+}
+.loginConHover {
+  content: "";
+}
+.loginConHover:hover {
+  opacity: 0.7;
+}
+
 @media screen and (max-width: 992px) {
   .mobileV {
     width: 100%;
